1、更新ExposeClass注解，增加name和description属性 2、更新ReflectUtils，优化getExposeClass相关方法 3、更新ByteUtils，移除sun.misc.BASE64Encoder类，换用org.apache.commons.codec.binary.Base64类